CHATS_SIT/force-app/main/default/objects/Provider_Review__c.object
<CustomObject>

    <fields>
        <fullName>Applicable_Elements__c</fullName>
        <label>Applicable Elements</label>
        <summaryFilterItems>
            <field>Provider_Review_Response__c.ProviderReview_QuestionMain__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Provider_Review_Response__c.Provider_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>

    <fields>
        <fullName>Attendance_Tracking__c</fullName>
        <label>Attendance Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>ATS WAIVER</fullName>
                </value>
                <value>
                    <fullName>ELV/CORE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REASON_END_AGRMT__c</fullName>
        <label>Fiscal Agreement Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00712</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>CDE_TYPE_PROVR__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00691</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>Change_Indicator__c</fullName>
        <label>Change Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Recorded__c</fullName>
        <label>Attendance Recorded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Element_Accuracy__c</fullName>
        <formula>1 - (Error_Elements__c / Applicable_Elements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Element Accuracy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>

    <fields>
        <fullName>Error_Elements__c</fullName>
        <label>Error Elements</label>
        <summaryFilterItems>
            <field>Provider_Review_Response__c.ProviderReview_QuestionMain__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Provider_Review_Response__c.Provider_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>

    <fields>
        <fullName>Fiscal_Agreement_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fiscal Agreement End Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Fiscal_Agreement_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fiscal Agreement Begin Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Improper_Payment__c</fullName>
        <label>Improper Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>Improper_Payment_Amount__c</fullName>
        <label>Improper Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>Improper_Payment_Type__c</fullName>
        <label>Overpayment or Underpayment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Underpayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted?</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00692</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Review_License_Types</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>No_of_Children_in_care__c</fullName>
        <label># of Children in care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Reviews</relationshipLabel>
        <relationshipName>Provider_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>Provider_Fiscal_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Fiscal Agreement</label>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipLabel>Provider Reviews</relationshipLabel>
        <relationshipName>Provider_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>Quality_of_Rating__c</fullName>
        <label>Quality Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QE Provider</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Recovery_Amount__c</fullName>
        <label>Recovery Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>Recovery_Needed__c</fullName>
        <label>Recovery Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Error free</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Completed with errors</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Reviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Reviewer_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewer Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Sample_Month__c</fullName>
        <label>Sample Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00614</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>Sample_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>

    <label>Provider Review</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Provider Review Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>