CHATS_SIT/force-app/main/default/objects/Provider_Review__c/listViews/Phillips_Lead_Workers_Supervisors_Provider_Review.listView-meta.xml
<ListView>
    <fullName>Phillips_Lead_Workers_Supervisors_Provider_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Phillips Lead Workers / Supervisors</label>
    <queue>Phillips_Lead_Workers_Supervisors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>